--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@antv/g6": "^4.8.9",
     "cypress": "^10.0.3",
     "next": "^12.1.4",
+    "openai": "^3.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "undici": "^5.21.2"
